@@ -4,7 +4,8 @@ x.x:
 
 - added: users can register if registration is disabled but they have a valid group invite code
 - fixed: no groups to select in groups_river_widget
-- fixed: error during saving of special states 
+- fixed: error during saving of special states
+- fixed: if trying to access a hidden group when logged out, correctly forward after login 
 
 2.9.1 (2014-3-14):
 
